// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createNote should publish noteAdded message with created note 1`] = `
Object {
  "id": 4,
  "text": "note text by subscription",
}
`;

exports[`createNote should return created note 1`] = `
Object {
  "id": 4,
  "text": "note text",
}
`;

exports[`deleteNoteById should delete note by id 1`] = `
Array [
  Object {
    "id": 2,
    "text": "Look deep into nature, and then you will understand everything better. Albert Einstein",
  },
  Object {
    "id": 3,
    "text": "Be yourself; everyone else is already taken. Oscar Wilde",
  },
]
`;

exports[`deleteNoteById should return deleted note 1`] = `
Object {
  "id": 1,
  "text": "Well done is better than well said. Benjamin Franklin",
}
`;

exports[`getNoteById should get note by id 1`] = `
Object {
  "id": 1,
  "plain": Object {
    "id": 1,
    "text": "Well done is better than well said. Benjamin Franklin",
  },
  "text": "Well done is better than well said. Benjamin Franklin",
}
`;

exports[`getNotes should get all notes 1`] = `
Array [
  Object {
    "id": 1,
    "text": "Well done is better than well said. Benjamin Franklin",
  },
  Object {
    "id": 2,
    "text": "Look deep into nature, and then you will understand everything better. Albert Einstein",
  },
  Object {
    "id": 3,
    "text": "Be yourself; everyone else is already taken. Oscar Wilde",
  },
]
`;
